@@ -148,6 +148,7 @@ LDFLAGS = $(LDFLAGS)
 # Libxml object files.
 XML_OBJS = $(XML_INTDIR)\c14n.obj\
 	$(XML_INTDIR)\catalog.obj\
+	$(XML_INTDIR)\chvalid.obj\
 	$(XML_INTDIR)\debugXML.obj\
 	$(XML_INTDIR)\dict.obj\
 	$(XML_INTDIR)\DOCBparser.obj\
@@ -186,6 +187,7 @@ XML_OBJS = $(XML_INTDIR)\c14n.obj\
 # Static libxml object files.
 XML_OBJS_A = $(XML_INTDIR_A)\c14n.obj\
 	$(XML_INTDIR_A)\catalog.obj\
+	$(XML_INTDIR_A)\chvalid.obj\
 	$(XML_INTDIR_A)\debugXML.obj\
 	$(XML_INTDIR_A)\dict.obj\
 	$(XML_INTDIR_A)\DOCBparser.obj\
