@@ -127,6 +127,7 @@ LDFLAGS = $(LDFLAGS) /OPT:NOWIN98
 # Libxml object files.
 XML_OBJS = $(XML_INTDIR)\c14n.obj\
 	$(XML_INTDIR)\catalog.obj\
+	$(XML_INTDIR)\chvalid.obj\
 	$(XML_INTDIR)\debugXML.obj\
 	$(XML_INTDIR)\dict.obj\
 	$(XML_INTDIR)\DOCBparser.obj\
@@ -165,6 +166,7 @@ XML_OBJS = $(XML_INTDIR)\c14n.obj\
 # Static libxml object files.
 XML_OBJS_A = $(XML_INTDIR_A)\c14n.obj\
 	$(XML_INTDIR_A)\catalog.obj\
+	$(XML_INTDIR_A)\chvalid.obj\
 	$(XML_INTDIR_A)\debugXML.obj\
 	$(XML_INTDIR_A)\dict.obj\
 	$(XML_INTDIR_A)\DOCBparser.obj\
